<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.ungcsci.paintbynumber.PaintView
        android:id="@+id/paintActivity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFFFFF" />

    <!-- Horizontal layout for toggle & mode buttons -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/toggleNumbersButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_numbers" />

        <ImageButton
            android:id="@+id/drawModeButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/draw_mode"
            android:src="@drawable/ic_pencil" />

        <ImageButton
            android:id="@+id/zoomModeButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/zoom_mode"
            android:src="@drawable/ic_hand" />
    </LinearLayout>

    <!-- Other buttons stacked vertically -->
    <Button
        android:id="@+id/admireButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/admire_painting"
        android:visibility="gone"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="150dp" />

    <Button
        android:id="@+id/mainMenuButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/main_menu"
        android:visibility="gone"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="50dp" />

    <Button
        android:id="@+id/shareButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/share_painting"
        android:visibility="gone"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="100dp" />

</LinearLayout>
