<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F5FF"
    tools:context=".MainMenuActivity">
    <!-- Info-text Button -->
    <ImageButton
        android:id="@+id/how_to_play_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/how_to_play"
        android:onClick="onHowToPlayButtonClick"
        android:padding="8dp"
        android:src="@drawable/ic_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#735DA5" />

    <!-- Centered Main Image -->
    <ImageView
        android:id="@+id/main_menu_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/starry_night_16_32_512"
        app:layout_constraintTop_toBottomOf="@id/how_to_play_button"
        app:layout_constraintBottom_toTopOf="@id/text_and_buttons_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <!-- Layout for text and buttons-->
    <LinearLayout
        android:id="@+id/text_and_buttons_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/main_menu_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.75">

        <!-- Text -->
        <TextView
            android:id="@+id/image_type_select_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/image_type_select"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginBottom="20dp" />

        <!-- Layout for buttons -->
        <LinearLayout
            android:id="@+id/button_container"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- Default Button -->
            <Button
                android:id="@+id/default_images_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:backgroundTint="#735DA5"
                android:onClick="onDefaultActivityClick"
                android:paddingHorizontal="20dp"
                android:paddingVertical="8dp"
                android:radius="20dp"
                android:text="@string/default_images"
                android:textColor="#FFFFFF" />

            <!-- Custom Button -->
            <Button
                android:id="@+id/custom_images_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#735DA5"
                android:onClick="onCustomActivityClick"
                android:paddingHorizontal="20dp"
                android:paddingVertical="8dp"
                android:radius="20dp"
                android:text="@string/custom_images"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>

    <!-- Credits -->
    <TextView
        android:id="@+id/group_names"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:alpha="0.6"
        android:text="@string/credits"
        android:textAlignment="center"
        android:textColor="#735DA5"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>